# shadowstate

./: .gitignore  ARCIUM_INTEGRATION.md  Cargo.toml  DEPLOYMENT.md  README.md  ROADMAP.md
client/: README.md  package.json  shadowstate-client.ts
mm-gateway/: Cargo.toml  README.md
mm-gateway/src/: error.rs  event.rs  gateway.rs  hedge.rs  lib.rs  portal.rs  risk.rs  rpc.rs  stream.rs  venue.rs
mm-gateway/tests/: end_to_end.rs
mpc-core/: Cargo.toml  README.md
mpc-core/src/: committee.rs  engine.rs  error.rs  frame.rs  ingestion.rs  lib.rs  mxe.rs  order.rs  relay.rs  relayer.rs  seal.rs  secret_share.rs
mpc-core/tests/: end_to_end.rs
program/: Cargo.toml  README.md
program/src/: error.rs  lib.rs  math.rs  sig.rs  state.rs  utils.rs
program/src/instructions/: claim_mm_winnings.rs  claim_winnings.rs  close_market.rs  deposit_collateral.rs  deposit_mm_collateral.rs  init_user_position.rs  initialize_market.rs  mod.rs  resolve_market.rs  settle.rs  submit_batch.rs  submit_batch_trusted.rs  update_risk_params.rs  withdraw_collateral.rs  withdraw_mm_collateral.rs
program/tests/: settlement.rs
protocol/: Cargo.toml  README.md
protocol/src/: constants.rs  frame.rs  ids.rs  lib.rs
shadowstate_mxe/: Anchor.toml  Arcium.toml  README.md
shadowstate_mxe/encrypted-ixs/src/: lib.rs
shadowstate_mxe/programs/shadowstate_mxe/: Cargo.toml
shadowstate_mxe/programs/shadowstate_mxe/src/: lib.rs
shadowstate_mxe/tests/: shadowstate_mxe.ts
web/: LOCAL_DEMO.md  README.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/app/api/market-meta/: route.ts
web/app/create/: page.tsx
web/app/market/[address]/: page.tsx
web/app/portfolio/: page.tsx
web/components/: Claim.tsx  Collateral.tsx  CreateMarketForm.tsx  Faucet.tsx  Header.tsx  HomeFunds.tsx  MarketCard.tsx  MarketListCard.tsx  OrderTicket.tsx  Portfolio.tsx  PortfolioRow.tsx  Toast.tsx  ui.tsx
web/lib/: arcium.ts  constants.ts  discover.ts  env.ts  faucet.ts  format.ts  ix.ts  markets.ts  meta.tsx  payout.ts  pdas.ts  state.ts  token.ts  tx.ts  useMarket.ts  useMarkets.ts  usePortfolio.ts
web/lib/idl/: shadowstate_mxe.json  shadowstate_mxe.ts
web/scripts/: check-faucet-balance.mjs  check-faucet.mjs  create-market.mjs  fund-faucet.mjs  setup-faucet.mjs  test-mint.mjs
